--- a/pages/bungMascardi.html
+++ b/pages/bungMascardi.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meliquina | Casas Modernas</title>
+        <title>Bungalows | Bungalow Mascardi</title>
         <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
         <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
         <meta property="og:type" content="article"> 
@@ -17,7 +17,7 @@
         <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-        <link rel="icon" type="image/jpg" href="images/favicon.ico">
+        <link rel="icon" type="image/jpg" href="/images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,7 +28,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     
     </head>
@@ -36,7 +36,7 @@
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -70,13 +70,13 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/catedral4.jpg" class="d-block w-100" alt="...">
+                        <img src="/images/bung2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/catedral5.jpg" class="d-block w-100" alt="...">
+                        <img src="/images/bung1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/catedral6.jpg" class="d-block w-100" alt="...">
+                        <img src="/images/bung3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -89,32 +89,32 @@
                 </button>
             </div>
             <div class="abs">
-                <h1 class="h1" >Casa Meliquina</h2>
-                <h2 class="h2"> Casa moderna de 6 ambientes</h2>
+                <h1 class="h1" >Bungalow Mascardi</h2>
+                <h2 class="h2"> Bungalow dos ambientes</h2>
             </div>
         </section>
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="images/persons.png" class="mb-2" alt="">
-                <h2 class="h2"><b>10</b></h2>
-                <h3 class="h3">Hasta 12 Personas.</h3>
+                <img src="/images/persons.png" class="mb-2" alt="">
+                <h2 class="h2"><b>4</b></h2>
+                <h3 class="h3">Hasta 4 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/flat.png" class="mb-2" alt="">
-                <h2 class="h2"><b>190 m2</b></h2>
+                <img src="/images/flat.png" class="mb-2" alt="">
+                <h2 class="h2"><b>80 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/bed.png" class="mb-2" alt="">
-                <h2 class="h2"><b>$22.000</b></h2>
+                <img src="/images/bed.png" class="mb-2" alt="">
+                <h2 class="h2"><b>$12.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
         </section>
 
         <section>
-            <h3 class="h2 text-center mb-4 info">Informacion de la Casa.</h3>
-            <p class="text-center pm">La Casa Meliquina posee dos grandes plantas: En planta alta dos amplias habitaciones con cama doble King size, las dos con baño en suite, tv con direct TV y calefaccion propia. Ademas cuenta con tres dormitorios con camas individuales de 1 plaza y media. En planta baja cuenta con un Living con sillones y chimenea de piedra, sala de estar, posee amplio comedor con sillas y Tv. Cocina 100% equipada con horno, heladera con freezer, lavavajillas y microondas. Tambien posee dos baños completos con bañera y loza radiante. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, quincho con comedor, parrilla y asador.
+            <h3 class="h2 text-center mb-4 info">Informacion del Bungalow.</h2>
+            <p class="text-center p">El Bungalow Mascardi posee dos grandes ambientes: En planta alta una amplia habitacion con cama King size, ropero integrado, Tv por cable y calefaccion propia. En planta baja cuenta con un Living con sillon cama en el que se pueden armar dos camas singles, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, y heladera. Tambien posee un baño completo con bañera de hidromasajes. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, deck exterior con parrilla y mesa con sillas.
         </section>
 
         <section>
@@ -122,75 +122,67 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Servicio de ropa blanca</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Tv con DirecTV</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>2 baños con bañera de hidromasajes</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Baño con bañera de hidromasaje</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Baños en suite</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Dormitorio con ropero integrado</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Habitaciones con cama King size</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Habitacion con cama King</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Habitaciones alfombradas y con ropero</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Dormitorio alfombrado</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Loza radiante de 8 circuitos individuales</p>
-                    </div>
-                    <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Jardin arbolado con plantas de la zona</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Piso radiante</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Energia solar y grupo electrogeno propio</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Caja de seguridad</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Chimenea interior de piedra</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Deck exterior con parrilla</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Quincho propio con comedor y parrilla</p>
-                    </div>
-                    <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servicio de limpieza diario</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
@@ -198,7 +190,7 @@
         </section>
 
         <section class="text-center">
-            <h3 class="h3 text-center mt-4">Realice su reserva para la Casa Meliquina</h3>
+            <h3 class="h3 text-center mt-4">Realice su reserva para el Bungalow Moreno</h3>
             <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
