--- a/pages/cabMoreno.html
+++ b/pages/cabMoreno.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Casas Modernas | Bungalow Mascardi</title>
+        <title>Cabañas | Cabaña Moreno</title>
         <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
         <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
         <meta property="og:type" content="article"> 
         <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
         <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
         <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
-        <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+        <meta property="og:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco//images/imgtr2.jpg">
         <meta name="twitter:title" content="Cabañas Casa de Piedra Bariloche">
         <meta name="twitter:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
-        <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
+        <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco//images/imgtr2.jpg">
         <meta name="author" content="FrancoHoyos">
         <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-        <link rel="icon" type="image/jpg" href="images/favicon.ico">
+        <link rel="icon" type="image/jpg" href="/images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,7 +28,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     
     </head>
@@ -36,7 +36,7 @@
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -70,13 +70,10 @@
             <div id="carouselExampleControlsM" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/catedral3.jpg" class="d-block w-100" alt="...">
+                        <img src="/images/interiorcab2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/catedral2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="images/catedral1.jpg" class="d-block w-100" alt="...">
+                        <img src="/images/interiorcab2.2.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsM" data-bs-slide="prev">
@@ -89,32 +86,32 @@
                 </button>
             </div>
             <div class="abs">
-                <h1 class="h1" >Casa Catedral</h2>
-                <h2 class="h2"> Casa moderna de 5 ambientes</h2>
+                <h1 class="h1" >Cabaña Moreno</h2>
+                <h2 class="h2"> Cabaña Triple</h2>
             </div>
         </section>
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="images/persons.png" class="mb-2" alt="">
-                <h2 class="h2"><b>10</b></h2>
-                <h3 class="h3">Hasta 10 Personas.</h3>
+                <img src="/images/persons.png" class="mb-2" alt="">
+                <h2 class="h2"><b>6</b></h2>
+                <h3 class="h3">Hasta 6 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/flat.png" class="mb-2" alt="">
-                <h2 class="h2"><b>160 m2</b></h2>
+                <img src="/images/flat.png" class="mb-2" alt="">
+                <h2 class="h2"><b>70 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/bed.png" class="mb-2" alt="">
-                <h2 class="h2"><b>$18.000</b></h2>
+                <img src="/images/bed.png" class="mb-2" alt="">
+                <h2 class="h2"><b>$10.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
         </section>
 
         <section>
-            <h3 class="h2 text-center mb-4 info">Informacion de la Casa.</h2>
-            <p class="text-center pm">La Casa Catedral posee dos grandes plantas: En planta alta dos amplias habitaciones con cama King size, Tv con direct TV y calefaccion propia. El dormitorio principal cuenta con baño en suite con bañera de hidromasajes. Ademas cuenta con dos dormitorios con camas individuales. En planta baja cuenta con un Living con sillones y hogar a leña con chimenea, posee un comedor con sillas y Tv. Cocina 100% equipada con horno, heladera con freezer, lavavajillas y microondas. Tambien posee un baño completo con bañera y loza radiante. Toda la unidad cuenta con ventanales con vista al bosque y a las montañas, quincho con comedor, parrilla y asador.
+            <h3 class="h2 text-center mb-4 info">Informacion de la Cabaña.</h2>
+            <p class="text-center p">La cabaña Moreno posee un gran ambiente dividido: Una habitacion con cama Queen size y una habitacion con dos camas singles, ambas con Tv por cable y calefaccion. Cuenta un amplio Living con un sillon cama en el que se pueden armar dos camas singles, posee una mesa comedor con sillas y hogar a leña. Cocina 100% equipada con horno, heladera y microondas. Tambien posee un baño completo con bañera. Cabaña con ventanales con vista al bosque y al Lago Moreno, deck exterior con parrilla y mesa con sillas.
         </section>
 
         <section>
@@ -122,71 +119,63 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Tv con DirecTV</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>2 baños con bañera de hidromasajes</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Baño con bañera de hidromasaje</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Baño en suite</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Amplio dormitorio</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Habitaciones con cama King size</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Habitacion con 2 camas singles</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Habitaciones alfombradas y con ropero</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Calefaccion y agua caliente</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Loza radiante de 8 circuitos individuales</p>
-                    </div>
-                    <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Jardin arbolado con plantas de la zona</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Sector con parrila y asador</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Chimenea interior</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Caja fuerte</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Quincho propio con comedor y parrilla</p>
+                        <img src="/images/check.png" alt="">
+                        <p>Deck exterior</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
-                        <p>Servicio de limpieza diario</p>
-                    </div>
-                    <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Estacionamiento individual</p>
                     </div>
                 </div>
@@ -194,7 +183,7 @@
         </section>
 
         <section class="text-center">
-            <h3 class="h3 text-center mt-4">Realice su reserva para la Casa Catedral</h3>
+            <h3 class="h3 text-center mt-4">Realice su reserva para la cabaña Moreno</h3>
             <a href="#" class="btn btn-outline-secondary btn-xl mt-3">Reservar ahora</a>
         </section>
     </main>
