--- a/pages/cabNahuel.html
+++ b/pages/cabNahuel.html
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-    <link rel="icon" type="image/jpg" href="images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
 </head>
@@ -36,7 +36,7 @@
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -70,10 +70,10 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"> <!--carrousel-->
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/interior1.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/interior1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/interior1.2.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/interior1.2.jpg" class="d-block w-100" alt="...">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -94,17 +94,17 @@
 
         <section class="text-center mt-5 icons">
             <div class="mb-5">
-                <img src="images/persons.png" class="mb-2" alt="">
+                <img src="/images/persons.png" class="mb-2" alt="">
                 <h2 class="h2"><b>4</b></h2>
                 <h3 class="h3">Hasta 4 Personas.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/flat.png" class="mb-2" alt="">
+                <img src="/images/flat.png" class="mb-2" alt="">
                 <h2 class="h2"><b>50 m2</b></h2>
                 <h3 class="h3">Metros Cuadrados.</h3>
             </div>
             <div class="mb-5">
-                <img src="images/bed.png" class="mb-2" alt="">
+                <img src="/images/bed.png" class="mb-2" alt="">
                 <h2 class="h2"><b>$8.000</b></h2>
                 <h3 class="h3">Tarifa por noche</h3>
             </div>
@@ -121,67 +121,67 @@
             <div class="services">
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servicio de Wifi</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Desayuno incluido</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Servico de ropa blanca</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Tv por cable</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Cocina totalmente equipada</p>
                     </div>
                 </div>
                 <div class="colum mb-4">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Juego de Baño</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Amplio dormitorio</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Calefaccion y agua caliente</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Ventanales con vista al bosque</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Sector con parrila y asador</p>
                     </div>
                 </div>
                 <div class="colum mb-5">
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Aire acondicionado</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Ventilador de techo</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Caja fuerte</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Deck exterior</p>
                     </div>
                     <div class="infor">
-                        <img src="images/check.png" alt="">
+                        <img src="/images/check.png" alt="">
                         <p>Sector estacionamiento techado</p>
                     </div>
                 </div>
