--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | Casa de Piedra</title>
+    <title>Ubicacion | Casa de Piedra</title>
     <meta name="description" content="Cabañas en alquiler - Cabañas en Bariloche - Contrata tus excursiones - Reserva tus vacaciones - Descansar en el sur - Veni a conocer la Patagonia Argentina">
     <meta name="keywords" content="cabaña,alquiler,vuelos,vacaciones,turismo,excursiones,bariloche,viajes,patagonia,sur,nieve,bosque,lagos">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="article"> 
     <meta property="og:title" content="Cabañas Casa de Piedra Bariloche">
     <meta property="og:description" content="Alquila tu cabaña en Bariloche y vivi una experiencia unica, disfruta de la Patagonia Argentina, la nieve, los bosques y los lagos">
     <meta property="og:url" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/">
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://vgnfran.github.io/PreEntrega2HoyosFranco/images/imgtr2.jpg">
     <meta name="author" content="FrancoHoyos">
     <meta name="google-site-verification" content="DMAURegnRxkh1IY5CKc2OE4sdjQ60iccHPOP1sx3V2w" />
-    <link rel="icon" type="image/jpg" href="images/favicon.ico">
+    <link rel="icon" type="image/jpg" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -28,14 +28,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
                     <!--------------HEADER----------->
     <header>
         <nav class="navbar  navbar-expand-lg navbar-ligth bg-ligth ml-auto "  >
             <div class="container"  >
-             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
+             <a class="navbar-brand" href="#" aria-label="Redireccion al inicio"><img src="/images/iconMount.png" id="iconmont" alt="iconoMontaña"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -60,186 +60,52 @@
                 </ul>
               </div>
             </div>
-          </nav>
+          </nav>      
     </header>
 
-    <head>
-        <section class="container-xxl xlContacto">
-            <div class="contContact">
-                <img src="images/ubicacionBg.jpg" alt="">
-                <h1 class="titleContact">Contacto</h1>
-                <p>Te invitamos a que nos contactes para realizar una reserva o por cualquier consulta, envienos sus dudas o solicitud de reserva y nos pondremos en contacto con usted a la brevedad. </p>
-            </div>
 
+    <head>
+        <section class="contUbi">
+            <div class="bgUbi">
+                <img src="/images/ubiHead.jpg" alt="">
+            </div>
+            <h1>¿Donde nos Encontramos?</h1>
+            <p>Casa de Piedra se encuentra en Villa Llao Llao, San Carlos de Bariloche en el kilómetro 13,8 de la Avenida Bustillo. El predio de 6 hectáreas que rodea al complejo se encuentra a orillas del lago Nahuel Huapi y está conformado por un bosque centenarios de cipreses y coihues.</p>
         </section>
     </head>
 
-
-    <section class="container xlBodyContact">
-      <div class="row">
-
-        <div class="col-sm-12" data-aos="fade-right">
-          <p class="text-center pm mb-4" id="h2Contact">Completa el formulario y nos pondremos en contacto con vos.<p>
-          <div class="card shadow-lg">
-            <div class="card-body">
-
-              <div class="container">
-                <form class="row" action="https://formspree.io/f/xlevpvqe"
-                method="POST">
-                  <div class="col-6">
-                    <label for="nameInput" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nameInput" required
-                    name="name">
+    <main>
+        <h2 class="text-center mt-3" id="h2Ubi">Nuestra Ubicacion</h2>
+      
+        <section class="container-xxl containerUbi">
+  
+          <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-2 g-3 " id="boxubi">
+  
+            <div class="col" >
+              <div class="card shadow-lg" data-aos="fade-right" >
+                <div class="card-body" id="iframe">
+                  <div class="ratio ratio-4x3" >
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4252.348725834405!2d-71.45173996091913!3d-41.09380449304551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a77e3ab281749%3A0xdceb488aa147f1ee!2sAv.%20Exequiel%20Bustillo%2013840%2C%20San%20Carlos%20de%20Bariloche%2C%20R%C3%ADo%20Negro!5e0!3m2!1ses-419!2sar!4v1664164530947!5m2!1ses-419!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mapa"></iframe>
                   </div>
-
-                  <div class="col-6">
-                    <label for="surnameInput" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="surnameInput" required name="surname">
-                  </div>
-
-                  <div class="col-12 mb-6 mt-2">
-                    <label for="emailInput" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="emailInput" required
-                    name="email">
-                  </div>
-
-                  <div class="col-6 mt-2">
-                    <label for="dateIn" class="form-label">Fecha de Llegada</label>
-                    <input type="date" class="form-control" id="dateIn" required
-                    name="dateIn">
-
-                  </div>
-                  <div class="col-6 mt-2 " >
-                    <label for="dateOut" class="form-label">Fecha de Salida</label>
-                    <input type="date" class="form-control" id="dateOut" required
-                    name="dateOut">
-                  </div>
-
-                  <div class="col-12 mt-4" >
-                    <select class="form-select form-select" aria-label="Ejemplo de .form-select-sm" id="selectCab" required name="selectUnit">
-                      <option selected>Elige tu Unidad</option>
-                      <optgroup label="Cabañas">
-                        <option value="nahuel">Cabaña Nahuel</option>
-                        <option value="moreno">Cabaña Moreno</option>
-                      </optgroup>
-                      <optgroup label="Bungalows">
-                        <option value="mascardi">Bungalow Mascardi</option>
-                        <option value="gutierrez">Bungalow Gutierrez</option>
-                      </optgroup>
-                      <optgroup label="Casas">
-                        <option value="catedral">Casa Catedral</option>
-                        <option value="meliquina">Casa Meliquina</option>
-                      </optgroup>
-
-                    </select>
-                  </div>
-
-                  <div class="col-12 mt-4" >
-                    <select class="form-select form-select" aria-label="Ejemplo de .form-select-sm" id="selectCab" required name="selectActivity">
-                      <option selected>Elige tu Actividad</option>
-                      <option value="none">Deseo no realizar Actividades</option>
-                      <optgroup label="Excursiones Terrestres">
-                        <option value="7lagos">Ruta de los 7 Lagos</option>
-                        <option value="circuito">Circuito Chico</option>
-                        <option value="otto">Cerro Otto</option>
-                        <option value="limay">Rios y Lagos Limay</option>
-                        <option value="tronador">Cerro Tronador</option>
-                      </optgroup>
-                      <optgroup label="Excursiones Lacustres">
-                        <option value="victoria">Isla Victoria</option>
-                        <option value="blest">Puerto Blest</option>
-                      </optgroup>
-                      <optgroup label="Excursiones Aventura"></optgroup>
-                      <option value="rafting">Rafting en el Manso</option>
-                      <option value="ski">Ski Cerro Catedral</option>
-                    </select>
-                  </div>
-
-                  <div class="col-6 mt-2">
-                    <label for="adults" class="form-label">Cantidad de Adultos:</label>
-                    <input type="number" class="form-control" id="adults" required name="adults">
-                  </div>
-
-                  <div class="col-6 mt-2">
-                    <label for="kids" class="form-label">Cantidad de Menores:</label>
-                    <input type="number" class="form-control" id="kids" name="childrens">
-                  </div>
-
-                  <div class="col-6 mt-2">
-                    <div class="form-check">
-                      <input type="checkbox" id="traslAero" class="form-check-input">
-                      <label for="traslAero" class="form-check-label" name="airport">Traslado desde el Aeropuerto</label>
-                    </div>
-                  </div>
-
-                  <div class="col-6 mt-2 ">
-                    <div class="form-check">
-                      <input type="checkbox" id="traslTerm" class="form-check-input">
-                      <label for="traslTerm" class="form-check-label" name="terminal">Traslado desde la Terminal</label>
-                    </div>
-                  </div>
-
-                  <div class="col-12 mt-3 mb-3">
-                    <label for="extrAsk" class="form-label"> Consultas:</label>
-                    <textarea class="form-control" id="extrAsk" rows="3" name="consult"></textarea>
-                  </div>
-
-                  <div class="col-6">
-                    <button class="btn btn-primary" type="submit">Enviar</button>
-                  </div>
-
-                </form>
+                </div>
               </div>
-
             </div>
-          </div>
-        </div>
-
-        <div class="col-sm-12" data-aos="fade-left">
-          <h2 class="text-center mt-5 mb-4" id="h2Contact">¿Ya reservaste? Completar para conocer el estado de tu reserva.</h2>
-          <div class="card shadow-lg">
-            <div class="card-body">
-
-              <div class="container">
-                <form class="row" action="https://formspree.io/f/xlevpvqe"
-                method="POST">
-                  <div class="col-6">
-                    <label for="nameInput2" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nameInput2" required name="name">
-                  </div>
-
-                  <div class="col-6">
-                    <label for="surnameInput2" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="surnameInput2" required name="surname">
-                  </div>
-
-                  <div class="col-12 mb-6 mt-2">
-                    <label for="emailInput2" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="emailInput2" required name="email">
-                  </div>
-
-                  <div class="col-6 mt-3">
-                    <label for="reserv" class="form-label">Numero de reserva:</label>
-                    <input type="number" class="form-control" id="reserv" required name="number">
-                  </div>
-
-                  <div class="col-6 mt-5">
-                    <button class="btn btn-primary" type="submit">Enviar</button>
-                  </div>
-                </form>
+  
+            <div class="col">
+              <div class="card shadow-lg" data-aos="fade-left">
+                <div class="card-body text-center .gradient" id="bodyCard">
+                  <h3 class="card-title" id="ubiTitle">¿Donde nos ubicamos?</h3>           
+                  <p class="card-text" id="pUbi">Complejo Casa de Piedra se encuentra ubicado en Av. Bustillo 13840. Cuenta con una excelente vista al Lago Nahuel Huapi.
+                  Estratégicamente ubicados para la mejor vista de Bariloche y su entorno... Atendido por sus dueños y con una excelente ubicación frente al lago Nahuel Huapi y a tan sólo 800 metros de Playa Serena, lo invita a disfrutar de su estadía en Bariloche. En medio de un paisaje deslumbrante de montañas y bosques. Disfrutarás de una fascinante naturaleza en una hectárea de bosque nativo de viejos cipreses, amplio parque, sendas, rincones y flores durante todo el año.</p>
+                  <h3 class="card-subtitle" id="ubiTitle" >¿Como llegar?</h3>
+                  <p id="pUbi">La linea 20 de Transporte Urbano de Pasajos (TUP) ofrece el servicio que te lleva desde la terminal de micros, pasando por el centro de San Carlos de Bariloche. Para tomarlo en el centro podés hacerlo en Moreno al 400, en la Plaza que está detrás del Centro Cívico en San Martín e Indendencia o sino sobre la Avenida Exequiel Bustillo.</p>            
+                </div>
               </div>
-
             </div>
+  
           </div>
-        </div>
-      </div>
-    </section>
-
-  </main>
-
-
-
-
+        </section>
+    </main>
 
 
 
@@ -249,7 +115,7 @@
     <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
       <span class="text-muted">© 2022 Todos los derechos reservados. Casa de Piedra.</span>
-      </div>
+      </div>    
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex mt-2" id="iconsFt">
         <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/frann21_/" target="_blank" aria-label="Instagram del desarrollador"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
@@ -266,6 +132,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
-    </script>
+    </script>    
   </body>
 </html>
